<resources>
    <string name="app_name">EosPocket</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="create_wallet_text">Create New Wallet</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="create_wallet_title">Create Wallet</string>

    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>

    <string name="create_confirm">I understand that if I forget lose my password I will never be able to access my assets</string>
    <string name="error_password_weak">Password is weak</string>
    <string name="need_all_agree">You must agree to the terms of use.</string>
    <string name="exist_wallet_error">Wallet is already exist. Please restat app</string>
    <string name="fail_create_wallet">Failed to create wallet. Please try again</string>
    <string name="loading_msg">now loading..</string>
    <string name="login_text">Login</string>
    <string name="private_key_text">Private Key</string>
    <string name="account_name_text">Account Name</string>
    <string name="import_account_msg">Eos Pocket does not send any data to server</string>
    <string name="import_text">Import</string>
    <string name="init_lock_title">Setting your pin code</string>
    <string name="unlock_title">Unlock with your pin code or fingerprint</string>
    <string name="invalid_pin_code">Invalid your pin code</string>
    <string name="invalid_fingerprint">Invalid your fingerprint</string>
    <string name="skip_text">Skip</string>
    <string name="import_account_text">Import Account</string>
    <string name="next_text">Next</string>
    <string name="invalid_account_msg">Please input your account name.</string>
    <string name="reg_later_text">I will register my private key later.</string>
    <string name="account_name_aleady_exist">Account name is already exist.</string>
    <string name="private_key_does_not_match">Account and private key does not matched.</string>
    <string name="success_import_account">Success.</string>
    <string name="title_balance">Balance</string>
    <string name="title_stake">Stake</string>
    <string name="title_setting">Setting</string>
    <string name="eos_text">EOS</string>
    <string name="tokens_text">Tokens</string>
    <string name="actions_text">Actions</string>
    <string name="title_action">Action</string>
    <string name="transfers_text">Transfers</string>
    <string name="transfer_send_text">SEND</string>
    <string name="transfer_from_text">FROM :</string>
    <string name="transfer_to_text">TO :</string>
    <string name="transfer_received_text">RECEIVED</string>
    <string name="more_text">more</string>
    <string name="title_more">More</string>

    <string name="btn_title_stake">Stake</string>
    <string name="btn_title_buy">Buy</string>
    <string name="btn_title_refund">Refund</string>

    <string name="side_menu_title_import_account">Import Account</string>
    <string name="title_import_private_key">Import Private Key</string>
    <string name="title_import_account">Import Account</string>
    <string name="balance_text">Balance</string>
    <string name="required_private_key_text">Private key is required.</string>
</resources>
