<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        style="@style/Widget.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <TextView
                android:id="@+id/stakeModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:text="@string/title_balance" />

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:background="@drawable/balance_bg"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                tools:layout_editor_absoluteX="20dp"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/reg_private_key_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:tint="@android:color/white"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_key" />

                <ImageView
                    android:id="@+id/eos_logo_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/eos_logo" />

                <TextView
                    android:id="@+id/account_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignTop="@+id/eos_logo_image"
                    android:layout_toRightOf="@+id/eos_logo_image"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/eos_text"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eos_balance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/eos_logo_image"
                    android:layout_below="@+id/eos_logo_image"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:text="-" />

                <TextView
                    android:id="@+id/usd_balance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/eos_logo_image"
                    android:layout_below="@+id/eos_balance_text"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/balance_usd_text_color"
                    android:textSize="18sp"
                    android:text="-" />

                <TextView
                    android:id="@+id/percent_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/usd_balance_text"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/white"
                    android:text="-" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/tokens_text" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="20dp">

                    <ProgressBar
                        android:id="@+id/token_loading_bar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/token_listview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/transfers_text" />

                <Button
                    android:id="@+id/action_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/more_text" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/transfer_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_import_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/import_account_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>